# esoft_bom_importer

./: README.md  pyproject.toml
esoft_bom_importer/: api.py  bg_validator.py  handle_exception.py  hooks.py  modules.txt  progress.py  utils.py  validator.py
esoft_bom_importer/esoft_bom_importer/custom/: bom_creator.json  bom_creator_item.json  item.json  item_barcode.json
esoft_bom_importer/esoft_bom_importer/doctype/bom_creator_history_log/: bom_creator_history_log.json  bom_creator_history_log.py
esoft_bom_importer/esoft_bom_importer/doctype/bom_creator_import_tool/: bom_creator_import_tool.js  bom_creator_import_tool.json  bom_creator_import_tool.py  test_bom_creator_import_tool.py
esoft_bom_importer/esoft_bom_importer/doctype/bom_creator_tool/: bom_creator_tool.js  bom_creator_tool.json  bom_creator_tool.py  test_bom_creator_tool.py
esoft_bom_importer/esoft_bom_importer/doctype/bom_creator_tool_history/: bom_creator_tool_history.js  bom_creator_tool_history.json  bom_creator_tool_history.py  bom_creator_tool_history_list.js  test_bom_creator_tool_history.py
esoft_bom_importer/esoft_bom_importer/doctype/bom_final_costing/: bom_final_costing.json  bom_final_costing.py
esoft_bom_importer/esoft_bom_importer/doctype/bom_hardware_costing/: bom_hardware_costing.json  bom_hardware_costing.py
esoft_bom_importer/esoft_bom_importer/doctype/bom_material_summary/: bom_material_summary.json  bom_material_summary.py
esoft_bom_importer/overrides/: bom_creator.py
esoft_bom_importer/public/py/: bom_creator.py
(+8 files in other folders)
